# clapCPluginTest

./: CMakeLists.txt  LICENSE  README.md
toolchain/: winx64.cmake
